2010-09-17  Junichi Satoh  <junichi@rworks.jp>

	* unix/SunOS/make_solaris_package/README,
	unix/SunOS/make_solaris_package/copyright,
	unix/SunOS/make_solaris_package/make_solaris_package.sh,
	unix/SunOS/make_solaris_package/prototype: Added agent package builder
	for Solaris.

2010-08-17  Junichi Satoh  <junichi@rworks.jp>

	* unix/pandora_agent_daemon, unix/tentacle_client: Added support for
	Solaris	virtualization, "zone".

2010-08-04  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/bin/collections: Added collections directory.

2010-08-04  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/installer/pandora.mpi: Added collections directory in the windows 
	installer.

2010-07-30  Dario Rodriguez <dario.rodriguez@artica.es>

	* unix/pandora_agent: Added code to change the nice parameter of the 
	pandora_agent process.


2010-07-28  Junichi Satoh  <junichi@rworks.jp>

	* unix/SunOS/pandora_agent.conf: Fixed a typo.

2010-07-21  Dario Rodriguez <dario.rodriguez@artica.es>

	* unix/pandora_agent: Added code to change the nice parameter of the 
	pandora_agent process.

2010-07-21  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added logic to search 
	existing collections in config file, and checking for ".." substrings in 
	path for security reasons.
	* win32/pandora_windows_service.h, pandora_windows_service.cc: Added logic
	to remove incoherences between collections directory and collection list 
	of config file.

2010-07-20  Dario Rodriguez <dario.rodriguez@artica.es>

	* win32/pandora_agent_conf.cc, pandora_agent_conf.h: Added a variable to
	control if the collection is added to the PATH.
	* win32/pandora_windows_service.h, pandora_windows_service.cc: Added logic
	to check if the collection is added to the PATH or not.

2010-07-16  Dario Rodriguez <dario.rodriguez@artica.es>

        * win32/misc/pandora_file.cc: fixed error that caused double free.
